--- a/src/app/components/admin/add-site/add-site.html
+++ b/src/app/components/admin/add-site/add-site.html
@@ -23,7 +23,13 @@
 
   <div class="mb-3">
     <label for="creation_date" class="form-label">Creation Date</label>
-    <input formControlName="creation_date" type="text" id="creation_date" name="creation_date" class="form-control">
+    <input formControlName="creation_date" type="date" id="creation_date" name="creation_date" class="form-control">
+    
+     
+  </div>
+  <div class="mb-3">
+    <label for="bc">    <input  type="checkbox" name="isBC" formControlName="isBC" > B.C</label>
+ 
   </div>
 
   <div class="mb-3">
