edit site works

--- a/src/app/components/admin/edit-site/edit-site.html
+++ b/src/app/components/admin/edit-site/edit-site.html
@@ -65,6 +65,6 @@
 
   <div class="d-flex gap-2">
     <button type="button" class="btn btn-dark w-100" routerLink="/admindash">Cancel</button>
-    <button [disabled]="siteForm.invalid" type="submit" class="btn btn-dark w-100">Add Site</button>
+    <button [disabled]="siteForm.invalid" type="submit" class="btn btn-dark w-100">Edit Site</button>
   </div>
 </form>
