--- a/src/app/components/home/home.css
+++ b/src/app/components/home/home.css
@@ -1,5 +1,4 @@
-
- .cont {
+.cont {
   position: relative;
   width: 100%;
   height: 80vh; /* full screen height */
@@ -38,6 +37,24 @@
   line-height: 1.6;
   text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
 }
+
+h3 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  font-size: 1.6rem;
+  color: #212529;
+  margin-bottom: 0.8rem;
+  text-align: center;
+}
+
+h6 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  color: #6c757d;
+  text-align: center;
+  line-height: 1.6;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
 .sec2 {
