--- a/src/app/components/admin/add-site/add-site.html
+++ b/src/app/components/admin/add-site/add-site.html
@@ -1,6 +1,6 @@
 <h2 class="text-center my-4">Add a New Site</h2>
 
-<form [formGroup]="siteForm" (ngSubmit)="onSubmit(); siteForm.reset()" noValidate class="p-4 border rounded shadow-sm" style="max-width: 600px; margin: auto;">
+<form [formGroup]="siteForm" (ngSubmit)="onSubmit(); siteForm.reset()" class="p-4 border rounded shadow-sm" style="max-width: 600px; margin: auto;">
   <div class="mb-3">
     <label for="title" class="form-label">Title</label>
     <input formControlName="title" type="text" id="title" name="title" class="form-control">
@@ -28,19 +28,25 @@
      
   </div>
   <div class="mb-3">
-    <label for="bc">    <input  type="checkbox" name="isBC" formControlName="isBC" > B.C</label>
+    <label for="isBC"> <input  type="checkbox" name="isBC" formControlName="isBC" > B.C</label>
  
   </div>
 
   <div class="mb-3">
     <label for="rating" class="form-label">Rating</label>
-    <input formControlName="rating" type="number" step="0.1" id="rating" name="rating" class="form-control" min="0" max="5">
+    <input formControlName="rating" type="number" step="0.1" id="rating" name="rating" class="form-control">
   </div>
+  @if (isInvalidRating()){
+    <div class="alert alert-danger">Rating must be between 0 and 5.</div>
+  }
 
   <div class="mb-3">
     <label for="openingHours" class="form-label">Opening Hours</label>
     <input formControlName="openingHours" type="text" id="openingHours" name="openingHours" class="form-control" placeholder="e.g. 09:00 - 19:00">
   </div>
+  @if (isInvalidHours()){
+    <div class="alert alert-danger">Opening hours must be in the format HH:MM - HH:MM (e.g., 09:00 - 19:00)</div>
+  }
 
   <div class="mb-3">
     <label for="visitorsPerYear" class="form-label">Visitors per Year</label>
@@ -51,11 +57,6 @@
     <label for="description" class="form-label">Description</label>
     <textarea formControlName="description" id="description" name="description" class="form-control" rows="4"></textarea>
   </div>
-
-  <!-- <div class="mb-3">
-    <label for="gallery" class="form-label">Gallery (comma-separated URLs)</label>
-    <input type="text" id="gallery" name="gallery" class="form-control">
-  </div> -->
 
   <div class="mb-3">
     <label for="formFile" class="form-label">Thumbnail</label>
