--- a/src/app/components/admin/edit-site/edit-site.html
+++ b/src/app/components/admin/edit-site/edit-site.html
@@ -1,50 +1,81 @@
-<h2 class="text-center my-4">Add a New Site</h2>
+<h2 class="text-center my-4">Edit Site</h2>
 
-<form [formGroup]="siteForm" (ngSubmit)="onSubmit(); siteForm.reset()" noValidate class="p-4 border rounded shadow-sm" style="max-width: 600px; margin: auto;">
+<form [formGroup]="siteForm" (ngSubmit)="onSubmit(); siteForm.reset()" class="p-4 border rounded shadow-sm" style="max-width: 600px; margin: auto;">
   <div class="mb-3">
     <label for="title" class="form-label">Title</label>
     <input formControlName="title" type="text" id="title" name="title" class="form-control">
   </div>
+  @if (isInvalidTitle()){
+    <div class="alert alert-danger">Title is required.</div>
+  }
 
   <div class="mb-3">
     <label for="era" class="form-label">Era</label>
     <input formControlName="era" type="text" id="era" name="era" class="form-control">
   </div>
+  @if (isInvalidEra()){
+    <div class="alert alert-danger">Era is required.</div>
+  }
 
   <div class="mb-3">
     <label for="address" class="form-label">Address</label>
     <input formControlName="address" type="text" id="address" name="address" class="form-control">
   </div>
+  @if (isInvalidAddress()){
+    <div class="alert alert-danger">Address is required.</div>
+  }
 
   <div class="mb-3">
     <label for="price" class="form-label">Price</label>
     <input formControlName="price" type="number" id="price" name="price" class="form-control">
   </div>
+  @if (isInvalidPrice()){
+    <div class="alert alert-danger">Price must be a at least 0.1TND.</div>
+  }
 
   <div class="mb-3">
     <label for="creation_date" class="form-label">Creation Date</label>
-    <input formControlName="creation_date" type="text" id="creation_date" name="creation_date" class="form-control">
+    <input formControlName="creation_date" type="date" id="creation_date" name="creation_date" class="form-control">
+  </div>
+  @if (isInvalidCreationDate()){
+    <div class="alert alert-danger">Creation Date is required.</div>
+  }
+
+  <div class="mb-3">
+    <label for="isBC"> <input  type="checkbox" name="isBC" formControlName="isBC" > B.C</label>
   </div>
 
   <div class="mb-3">
     <label for="rating" class="form-label">Rating</label>
-    <input formControlName="rating" type="number" step="0.1" id="rating" name="rating" class="form-control" min="0" max="5">
+    <input formControlName="rating" type="number" step="0.1" id="rating" name="rating" class="form-control">
   </div>
+  @if (isInvalidRating()){
+    <div class="alert alert-danger">Rating must be between 0 and 5.</div>
+  }
 
   <div class="mb-3">
     <label for="openingHours" class="form-label">Opening Hours</label>
     <input formControlName="openingHours" type="text" id="openingHours" name="openingHours" class="form-control" placeholder="e.g. 09:00 - 19:00">
   </div>
+  @if (isInvalidHours()){
+    <div class="alert alert-danger">Opening hours must be in the format HH:MM - HH:MM</div>
+  }
 
   <div class="mb-3">
     <label for="visitorsPerYear" class="form-label">Visitors per Year</label>
     <input formControlName="visitorsPerYear" type="number" id="visitorsPerYear" name="visitorsPerYear" class="form-control">
   </div>
+  @if (isInvalidVisitors()){
+    <div class="alert alert-danger">Visitors per year is required.</div>
+  }
 
   <div class="mb-3">
     <label for="description" class="form-label">Description</label>
     <textarea formControlName="description" id="description" name="description" class="form-control" rows="4"></textarea>
   </div>
+  @if (isInvalidDescription()){
+    <div class="alert alert-danger">Description is required.</div>
+  }
 
   <div class="mb-3">
     <label for="formFile" class="form-label">Thumbnail</label>
@@ -61,10 +92,9 @@
     <input type="checkbox" id="open" name="open" formControlName="open" class="form-check-input m-1" style="transform: scale(1.5)">
      Open
   </div>
-  
 
   <div class="d-flex gap-2">
     <button type="button" class="btn btn-dark w-100" routerLink="/admindash">Cancel</button>
-    <button [disabled]="siteForm.invalid" type="submit" class="btn btn-dark w-100">Edit Site</button>
+    <button [disabled]="siteForm.invalid" type="submit" class="btn btn-dark w-100">Add Site</button>
   </div>
 </form>
