--- a/src/app/components/error/error.html
+++ b/src/app/components/error/error.html
@@ -1,1 +1,7 @@
-<p>error works!</p>
+<!-- error404.html -->
+<section class="d-flex flex-column justify-content-center align-items-center text-center vh-100">
+  <h1 class="display-1 fw-bold text-danger">404</h1>
+  <h2 class="mb-4">Page Not Found</h2>
+  <p class="mb-4 text-muted">Oops! The page you're looking for doesn't exist or has been moved.</p>
+  <a href="/" class="btn btn-dark btn-md">Go Back Home</a>
+</section>
