--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,6 +1,6 @@
 
 
 <div class="d-flex gap-5 justify-content-center align-items-center " style="height: 12vh;">
-    © 2025 Sites Archéologiques de Tunisie <br>
+    © 2025 Sites Archeologiques de Tunisie <br>
     Project by Cherni & Ammar - ISET Charguia
 </div>
