--- a/src/app/components/site-selected/site-selected.html
+++ b/src/app/components/site-selected/site-selected.html
@@ -1,81 +1,127 @@
 <div>
-  <button (click)="returnToSites()">back</button>
+
+  <button class="back" (click)="returnToSites()"> <i class=" back bi bi-arrow-left"></i> </button>
+
 </div>
-<div class="d-flex mt-5 gap-5">
-  <div id="carouselExample" class=" ml-1 col-md-5  carousel slide  ">
+
+<div class="d-flex gap-5 justify-content-center align-items-center">
+
+  <div id="carouselExample" class=" ml-1 col-md-5 carousel slide ">
+
 
 
     <div class="carousel-inner">
+
       <div class="carousel-item active">
-        <img [src]="galery[0]" class=" d-block  w-100" alt="...">
+
+        <img [src]="galery[0]" class=" d-block w-100" alt="...">
+
       </div>
+
       <div class="carousel-item">
+
         <img [src]="galery[1]" class=" d-block w-100" alt="...">
+
       </div>
+
       <div class="carousel-item">
+
         <img [src]="galery[2]" class=" d-block w-100" alt="...">
+
       </div>
+
     </div>
+
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+
       <span class="visually-hidden">Previous</span>
+
     </button>
+
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
+
       <span class="visually-hidden">Next</span>
+
     </button>
-  </div>
-  <div class="d-flex flex-column  justify-content-center  col-md-6 ">
-    <p>Description: <br>{{sites[0].description}}</p>
-    @if (sites[0].isBC) {
-    <p> Creation date : {{ sites[0].creation_date | bCAC }} B.C </p>
-    }
-    @else {
-    <p> Creation date : {{ sites[0].creation_date | bCAC }} A.C </p>
-    }
-
-
-    <p> Era : {{sites[0].era}}</p>
-    <p [class]="{
-      'text-success': sites[0].visitorsPerYear > 1000000,
-      'text-warning': sites[0].visitorsPerYear > 500000 && sites[0].visitorsPerYear <= 1000000,
-      'text-danger': sites[0].visitorsPerYear <= 500000
-    }">
-      Visitors Per Year: {{sites[0].visitorsPerYear}}
-    <p> Adresse: {{sites[0].address}}</p>
-
 
   </div>
+
+  <div class="site-details col-md-6 ">
+
+    <div class="description-card">
+
+      <h2>Description:</h2>
+
+      <p class="description-text">{{ sites[0].description }}</p>
+
+
+
+      <div class="info-grid">
+        <div><span class="label">Status:</span>
+
+          <span [class.open]="sites[0].open" [class.closed]="!sites[0].open">
+
+            {{ sites[0].open ? 'Open' : 'Closed' }}
+
+          </span>
+
+        </div>
+
+        <div class="adress"><span class="label">Address:</span> {{ sites[0].address }}</div>
+
+        
+
+        <div><span class="label">Visitors/Year:</span> {{ sites[0].visitorsPerYear }}</div>
+
+        <div><span class="label">Creation Date:</span> {{ sites[0].creation_date | date:'yyyy' }} {{sites[0].isBC ?
+          'B.C' : 'A.C'}}</div>
+
+        <div><span class="label">Rating:</span> {{ sites[0].rating }} / 5</div>
+
+        <div><span class="label">Era:</span> {{ sites[0].era }}</div>
+
+        <div><span class="label">Opening Hours:</span> {{ sites[0].openingHours }}</div>
+
+
+      </div>
+
+    </div>
+
+  </div>
+
 </div>
 
+  <div class=" mt-5 d-flex flex-column align-items-center ">
 
-
-
-
-<div class="section2 d-flex gap-2 justify-content-center align-items-center">
-  <div class="d-flex flex-column align-items-center gap-3">
     <h3>comments</h3>
 
 
 
-
-
-    <div class="comments">
-      @for (item of commentes; track $index) {
-      <div class="list-group">
-        <a href="#" class="list-group-item  " aria-current="true">
-          <div class="d-flex w-100 n gap-2">
-            <h5 class="mb-1">{{item.author}}</h5>
-            <small>{{item.date}}</small>
-          </div>
-          <p class="mb-1">{{item.content}}</p>
-
-        </a>
-      </div>
-
-
-      }
-
-    </div>
-  </div>
+    <div class="comments d-flex align-items-center">
+    
+       <div class=" flex-column ">
+         @for (item of commentes; track $index) { 
+         <div class="">
+           <div class="">
+          <h6 class="mb-1">{{item.author}}</h6>
+           <small>{{item.date}}</small>
+             </div>
+           <p class="mb-1">{{item.content}}</p>
+           
+          
+           </div>
+       }
+       </div>
+  <div class="d-flex flex-column  justify-content-center gap-3">
+      <input type="text" placeholder="ajouter un commentaire">
+      <button class=" d-flex justify-content-center ADDCOMM" type="submit">
+        Add Comment
+</button>
 </div>
+
+      </div>
+  </div>
