--- a/src/app/components/home/home.css
+++ b/src/app/components/home/home.css
@@ -1,7 +1,7 @@
 .cont {
   position: relative;
   width: 100%;
-  height: 80vh; /* full screen height */
+  height: 80vh; 
   overflow: hidden;
   
 }
@@ -55,7 +55,6 @@ h6 {
   line-height: 1.6;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
 .sec2 {
   width: 90%;
