--- a/src/app/components/site-selected/site-selected.html
+++ b/src/app/components/site-selected/site-selected.html
@@ -11,24 +11,13 @@
 
 
     <div class="carousel-inner">
+      @for (item of sites[0].gallery; track $index) {
+      <div class="carousel-item " [class.active]="$index==0" >
 
-      <div class="carousel-item active">
+        <img [src]="galery[$index]" class=" d-block w-100" alt="...">
 
-        <img [src]="galery[0]" class=" d-block w-100" alt="...">
+      </div>}
 
-      </div>
-
-      <div class="carousel-item">
-
-        <img [src]="galery[1]" class=" d-block w-100" alt="...">
-
-      </div>
-
-      <div class="carousel-item">
-
-        <img [src]="galery[2]" class=" d-block w-100" alt="...">
-
-      </div>
 
     </div>
 
@@ -77,10 +66,10 @@
 
         <div><span class="label">Visitors/Year:</span> {{ sites[0].visitorsPerYear }}</div>
 
-        <div><span class="label">Creation Date:</span> {{ sites[0].creation_date | date:'yyyy' }} {{sites[0].isBC ?
+        <div><span class="label">Creation Date:</span> {{ sites[0].creation_date | year }} {{sites[0].isBC ?
           'B.C' : 'A.C'}}</div>
 
-        <div><span class="label">Rating:</span> {{ sites[0].rating }} / 5</div>
+        <div><span class="label">Rating:</span> {{ sites[0].rating |stars}}</div>
 
         <div><span class="label">Era:</span> {{ sites[0].era }}</div>
 
