--- a/src/app/components/site-selected/site-selected.html
+++ b/src/app/components/site-selected/site-selected.html
@@ -95,10 +95,12 @@
        <div class=" flex-column ">
          @for (item of commentes; track $index) { 
          <div class="">
-           <div class="">
-          <h6 class="mb-1">{{item.author}}</h6>
-           <small>{{item.date}}</small>
-             </div>
+           <div class="d-flex justify-content-between" >
+         <div> <h6 class="mb-1">{{item.author}}</h6>
+           <small>{{item.date}}</small></div>
+           <div>{{item.rating|stars}}</div>
+           </div>
+            
            <p class="mb-1">{{item.content}}</p>
            
           
