--- a/src/app/components/site-selected/site-selected.html
+++ b/src/app/components/site-selected/site-selected.html
@@ -116,4 +116,5 @@
 
       </div>
   </div>
-  <button type="button" (click)="afficher(sites[0].title)">tester</button>
+  <button type="button" (click)="getCoords(sites[0].title)">tester</button>
+  <app-site-map></app-site-map>
