--- a/src/app/components/site-selected/site-selected.html
+++ b/src/app/components/site-selected/site-selected.html
@@ -110,7 +110,7 @@
   <div class="d-flex flex-column  justify-content-center gap-3">
       <input type="text" placeholder="ajouter un commentaire">
       <button class=" d-flex justify-content-center ADDCOMM" type="submit">
-        Add Comment
+        add Comments
 </button>
 </div>
 
