--- a/src/app/components/site-selected/site-selected.html
+++ b/src/app/components/site-selected/site-selected.html
@@ -11,10 +11,10 @@
 
 
     <div class="carousel-inner">
-      @for (item of sites[0].gallery; track $index) {
+      @for (item of gallery; track $index) {
       <div class="carousel-item " [class.active]="$index==0" >
 
-        <img [src]="galery[$index]" class=" d-block w-100" alt="...">
+        <img [src]="gallery[$index]" class=" d-block w-100" alt="...">
 
       </div>}
 
