added site nav component

--- a/src/app/components/site-map/site-map.html
+++ b/src/app/components/site-map/site-map.html
@@ -1,12 +1,13 @@
-<!-- <h2>Géolocalisation avec Leaflet</h2>
+
+
+
+
+<h2>Geolocation with Leaflet</h2>
 
 @if(lat && lon) {
   <div>
-    Position trouvée ! Latitude : {{ lat }}, Longitude : {{ lon }}
+    Position found ! Latitude : {{ lat }}, Longitude : {{ lon }}
   </div>
 }
-
-<div id="map" style="height: 350px; margin-top: 10px;"></div> -->
-<h2>Géolocalisation avec Leaflet</h2>
 
 <div id="map"></div>
