--- a/src/app/components/site-map/site-map.css
+++ b/src/app/components/site-map/site-map.css
@@ -1,4 +1,16 @@
 #map {
   height: 350px;
-  width: 100%;
+  margin: 10px 40px;
+  width: 70%;
+  display: flex;
+  border-radius: 10px;
+  justify-content: center;
 }
+*{
+  text-align: center;
+}
+/* h2 {
+    color: #212529;
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+  } */
