--- a/src/app/components/admin/edit-site/edit-site.html
+++ b/src/app/components/admin/edit-site/edit-site.html
@@ -90,7 +90,7 @@
           <input (change)="onGallerySelected($event,$index)" class="form-control" type="file" id="formFileGallery">
         </div>
       }
-      <button type="button"  (click)="addGallery()">Add Gallery Image</button>
+      <button type="button"  class="btn btn-dark btn-sm"  (click)="addGallery()">Add Gallery Image</button>
     </div>
   </div>
   
