--- a/src/app/components/site-list/site-list.html
+++ b/src/app/components/site-list/site-list.html
@@ -10,7 +10,7 @@
                 <li class="dropdown-item">Minimum price: <b>{{minPrice}}</b></li>
                 <li class="d-flex align-items-center gap-2">
                 0
-                <input type="range" min="0" max="15" value="0" [(ngModel)]="minPrice" name="minPrice" (input)="priceSlider()">
+                <input type="range" min="0" max="15" value="0" [(ngModel)]="minPrice" name="minPrice" (input)="researchSites()">
                 15</li>
             </ul>
         </div>
