--- a/src/app/components/site-map/site-map.html
+++ b/src/app/components/site-map/site-map.html
@@ -3,7 +3,7 @@
 
 <div>
   
-<h2>Geolocation with Leaflet</h2>
+<h2>Location</h2>
 
 @if(!lat) {
   <div>
@@ -11,5 +11,7 @@
   </div>
 }
 
-<div id="map"></div>
+<div class=" mt-4  d-flex container justify-content-center" id="map">
+
+</div>
 </div>
