--- a/src/app/components/admin/add-site/add-site.html
+++ b/src/app/components/admin/add-site/add-site.html
@@ -90,7 +90,7 @@
           <input (change)="onGallerySelected($event,$index)" class="form-control" type="file" id="formFileGallery">
         </div>
       }
-      <button type="button"  (click)="addGallery()">Add Gallery Image</button>
+      <button class="btn btn-dark btn-sm" type="button"  (click)="addGallery()">Add Gallery Image</button>
     </div>
   </div>
   
