--- a/src/app/components/admin/admin-comments/admin-comments.html
+++ b/src/app/components/admin/admin-comments/admin-comments.html
@@ -1,22 +1,33 @@
-<div class="comments">
-  @for (site of siteList; track $index) {  
-    @for (c of site.comments; track $index){
-    <div class="list-group">
-        <div href="#" class="list-group-item d-flex justify-content-between align-items-center" aria-current="true">
-            <div>
-                <div class="d-flex w-100 n gap-2">
-                <h5 class="mb-1">{{c.author}}</h5>
-                <small>{{c.date}}</small>
-                <small>{{site.title}}</small>
-                </div>
-                <p class="mb-1">{{c.content}}</p>
-            </div>
-            <div>
-                <button type="button" class="btn btn-dark" (click)="onDeleteComment(site.id, c)">Delete</button>
-            </div>
-        </div>
-    </div>
-    }
-  }
+    <div class="comments container mt-4 ">
+    @for (site of siteList; track $index){
+        <div class="mb-4">
+        <h5 class="text-dark">{{site.title}}</h5>
 
- </div>
+        @for (c of site.comments; track $index){
+            <div class="card mb-2 shadow-sm d-flex align-content-center">
+            <div class="card-body d-flex justify-content-between align-items-start">
+                <div>
+                <div class="d-flex align-items-center mb-2 gap-2">
+                    <h6 class="mb-0 text-primary">{{c.author}}</h6>
+                    <small class="text-muted">{{c.date}}</small>
+                </div>
+                <p class="mb-0">{{c.content}}</p>
+                </div>
+
+                <div class="mt-2">
+                <button  
+                    type="button" 
+                    class="btn  btn-sm btn-dark" 
+                    (click)="onDeleteComment(site.id, c)">
+                    Delete
+                </button>
+                </div>
+
+            </div>
+            </div>
+        }
+        </div>
+    }
+    </div>
+
+    
