--- a/src/app/components/admin/changepasswords/changepasswords.html
+++ b/src/app/components/admin/changepasswords/changepasswords.html
@@ -1,10 +1,10 @@
 <div class=" mt-5 d-flex justify-content-center vh-70  ">
   <div class="card p-4 shadow  d-flex align-content-center" style="width: 350px;">
-    <h3 class="text-center mb-3 ">change password</h3>
+    <h3 class="text-center mb-3 ">Change password</h3>
 
     <form >
       <div class="mb-3">
-        <label for="username" class="form-label">old password</label>
+        <label for="username" class="form-label">Old password</label>
         <input
           type="password"
           id="email"    
@@ -38,7 +38,7 @@
         />
       </div>
 
-      <button type="submit" class="btn btn-dark w-100 btn" (click)="adminPassword()">change password</button>
+      <button type="submit" class="btn btn-dark w-100 btn" (click)="adminPassword()">Change password</button>
     </form>
   </div>
 </div>
