--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -11,33 +11,9 @@
 
 
 <app-features [class]="{sec2:true}" ></app-features>
+<app-main></app-main>
 
-<div class="sec2 d-flex gap-5 justify-content-center ">
-  <div class="sec2-img">
-    <img src="sites/amphitheatre/1.jpg" alt="Ancient Tunisia">
-  </div>
-  <div class="sec2-text">
-    <h3>Step Back in Time: Explore Tunisia's Ancient Ruins"</h3>
-    <h6 class="m-1">
-      Discover the fascinating history of <strong>Carthage</strong>, <strong>Dougga</strong>, and other iconic archaeological sites.<br><br>
-      Wander through ancient ruins, admire monumental architecture, and imagine the daily life of the civilizations 
-      that shaped Tunisia's rich and diverse cultural heritage over the centuries.
-    </h6>
-  </div>
-</div>
 
-<div class="sec2 d-flex gap-5 justify-content-center align-items-center flex-row-reverse">
-  <div class="sec2-img">
-    <img src="sites/amphitheatre/2.jpg" alt="Cultural Tunisia">
-  </div>
-  <div class="sec2-text">
-    <h3>Living Heritage: Tunisia's Culture Through the Ages</h3>
-    <h6>
-      Experience the vibrant traditions, local customs, and cultural practices that keep Tunisia's heritage alive today.<br><br>
-      From festivals to artisanal crafts, immerse yourself in the living culture that connects the country's rich archaeological past with its dynamic present.
-    </h6>
-  </div>
-</div>
 
 
 
