--- a/src/app/components/site-map/site-map.css
+++ b/src/app/components/site-map/site-map.css
@@ -1,16 +1,15 @@
 #map {
-  height: 350px;
-  margin: 10px 40px;
-  width: 70%;
-  display: flex;
+  height: 400px;
+  width: 60%;
+
+
   border-radius: 10px;
-  justify-content: center;
 }
 *{
   text-align: center;
 }
-/* h2 {
-    color: #212529;
-    font-size: 1.5rem;
-    margin-bottom: 1.5rem;
-  } */
+h2 {
+    
+  font-family: 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+
+  }
