final final final touches

--- a/src/app/components/features/features.html
+++ b/src/app/components/features/features.html
@@ -6,7 +6,7 @@
       <div class="col-md-3">
         <div class="card h-80 shadow-sm border-0">
           <div class="card-body">
-            <img src="sites/carthage/1.jpg" alt="Ancient heritage" class="mb-3 rounded" width="100%" >
+            <img src="sites/thuburbo_majus/2.jpg" alt="Ancient heritage" class="mb-3 rounded" width="100%" >
             <h3 class="mb-3">Ancient Civilizations</h3>
             <p class="text-muted">Discover the fascinating history of Carthage, Dougga, and other iconic sites.</p>
           </div>
